; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/cloudabi32/extr_cloudabi32_thread.c_initialize_thread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/cloudabi32/extr_cloudabi32_thread.c_initialize_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.thread_create_args = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thread*, i8*)* @initialize_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @initialize_thread(%struct.thread* %0, i8* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.thread_create_args*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.thread_create_args*
  store %struct.thread_create_args* %7, %struct.thread_create_args** %5, align 8
  %8 = load %struct.thread*, %struct.thread** %3, align 8
  %9 = getelementptr inbounds %struct.thread, %struct.thread* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.thread_create_args*, %struct.thread_create_args** %5, align 8
  %12 = getelementptr inbounds %struct.thread_create_args, %struct.thread_create_args* %11, i32 0, i32 2
  store i32 %10, i32* %12, align 4
  %13 = load %struct.thread*, %struct.thread** %3, align 8
  %14 = load %struct.thread_create_args*, %struct.thread_create_args** %5, align 8
  %15 = getelementptr inbounds %struct.thread_create_args, %struct.thread_create_args* %14, i32 0, i32 1
  %16 = load %struct.thread_create_args*, %struct.thread_create_args** %5, align 8
  %17 = getelementptr inbounds %struct.thread_create_args, %struct.thread_create_args* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @cloudabi32_thread_setregs(%struct.thread* %13, i32* %15, i32 %18)
  ret i32 %19
}

declare dso_local i32 @cloudabi32_thread_setregs(%struct.thread*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
